--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "firebase": "^9.23.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
